# adi_gpu

./: Cargo.toml  README.md  fast_drawing.md  readme.md
examples/animated/: Cargo.toml
examples/animated/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
src/: lib.rs
