# "adi_gpu" - Aldaron's Device Interface / GPU
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2017 - 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "adi_gpu"
version = "0.10.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>",
]
license = "BSL-1.0"
documentation = "https://docs.rs/adi_gpu"
homepage = "https://plopgrizzly.com/adi_gpu"
repository = "https://github.com/plopgrizzly/adi_gpu"
readme = "readme.md"
description = "GPU interface - render graphics and do fast calculations"
keywords = ["vulkan", "graphics", "rendering", "opengl", "gpu"]
categories = ["rendering::graphics-api", "hardware-support",
	"rendering::engine", "rendering"]

[dependencies]
adi_gpu_base = "0.9"

[target.'cfg(any(target_os="macos", target_os="android", target_os="linux", target_os="windows", target_os="nintendo_switch"))'.dependencies]
adi_gpu_vulkan = "0.8"

[target.'cfg(any(target_os="android", target_os="linux", target_os="windows", target_os="web"))'.dependencies]
adi_gpu_opengl = "0.7"
