# "adi_gpu" - Aldaron's Device Interface / GPU
#
# Copyright Jeron A. Lau 2017 - 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "minimal"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]

[dependencies]
adi_gpu = { path = "../../" }
aci_png = "^0.6"
awi = { path = "../../../awi" } # "^0.2"
